feat: Implementing profarma client and product entities